--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body onload="close();">
     <script src="script.js"></script>
     <h1>The Relationship Between Short-Video-Based Social Media Use and Attention Span</h1>
+    <p>Made by Anankan Manawichitwanit</p>
     <form action="" method="post">
         ID Search: <input type="text" id="idText"><button onclick="idSearch(); return false;">Submit</button>
     </form>
