--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <select name="gender" id="gender">
             <option value="0">-</option>
             <option value="1">Male</option>
-            <option value="2">Fale</option>
+            <option value="2">Female</option>
             <option value="3">Prefer Not To Play</option>
         </select> <br>
         Education:         
